--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
             <div class="right">
                 <h1>Notes</h1>
                 <div class="notes">
+                    <div class="current-date-calendar">Quarta,14 de Junho de 2023</div>
                     <div class="note-item-modal">
                         <div class="note-menu">
                             <div class="note-title">...</div>
