feat: Implementação da versão final do sistema
Nesta versão do sistema de calendário, foram realizadas diversas melhorias, novas funcionalidades e correções de bugs, conforme detalhado abaixo:

Novas Funcionalidades:
- Adicionada exibição dinâmica da data atual e hora
- Implementação da seleção de dia no calendário
- Inclusão de controle de navegação entre meses

Correções de Bugs:
- Corrigido bug que causava erro ao selecionar um dia em diferentes meses
- Resolvido problema de formatação da data exibida na célula selecionada
- Ajustes na renderização dos dias do calendário para corrigir sobreposições

Alterações Gerais:
- Atualizado o layout da página no arquivo style.css
- Refatoração do código JavaScript para melhor clareza e organização
- Código revisado para seguir padrões de nomenclatura e boas práticas

Branch: main
Arquivos Modificados: index.html, style.css, script.js

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="right">
                 <h1>Notes</h1>
                 <div class="notes">
-                    <div class="current-date-calendar">---</div>
+                    <div class="current-date-selected">---</div>
                     <div class="note-item-modal">
                         <div class="note-menu">
                             <div class="note-title">...</div>
