feat: adicionar novas funcionalidades ao projeto
mudanças a serem submetidas:
- ajustadas configurações de responsividade e cores no arquivo style.css
- corrigidas algumas pontuações no arquivo script.js

branch: feature

arquivos modificados:
    index.html
	script.js
	style.css

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
             </div>
             <div class="right">
-                <h1>Notes</h1>
+                <h1>Notas</h1>
                 <div class="notes">
                     <div class="current-date-selected">---</div>
                     <div class="note-item-modal">
